--- a/DATA220Lab9_Done_except5ptC.Rmd
+++ b/DATA220Lab9_Done_except5ptC.Rmd
@@ -61,7 +61,7 @@ my.birthday=function(){
     x=sample(1:365, size=34, T)
     y <- as.data.frame(table(x))
     #length(which(y[2]==2))
-    if(length(which(y[2]==2))==1) count=count+1
+    if(length(which(y[2]==2))==2) count=count+1
     #sum(numbers == x)
   }
   count/nrep
@@ -114,14 +114,49 @@ The above R code generates 100,000 vectors, using sample(6, ...) is the same as 
 <p>
 
 #### 5:
+Part A:<p>
 ```{r}
-scramble.hats = function(n){
-  hats = 1:n
-  mixed.hats = sample(n)
+scramble.hats = function(){
+  hats = c(rep(1,10),rep(2,10))
+  mixed.hats = sample(hats)
   sum(hats == mixed.hats)
 }
 
-scramble.hats(2)
-z <- c(replicate(1000,scramble.hats(2))) #vector of men who got their correct hat's back with 0 representing those who didn't and 2 representing those who did.
-length(which(z==2))/1000 #provides the pergentage of those who recieved their correct hats back
+scramble.hats()
+```
+
+```{r}
+scramble.hatsTen = function(){
+  z <- c(replicate(1000,scramble.hats())) #vector of men who got their correct 
+  #hat's back with 0 representing those who didn't and 2 representing those 
+  #who did.
+  t <- table(z)
+  length(which(z==2))/1000 #provides the pergentage of those who recieved 
+  #their correct hats back
+  z <- c(replicate(1000,scramble.hats()))
+  t <- table(z)
+  t <- as.data.frame(table(z))
+  
+  total = 0
+  
+  count = 0
+  
+  sum(t[,"Freq"])
+  
+  ztotal=length(t[,"z"])
+  index=which(t[,"z"]==10)
+  #index
+  
+  greater = c(index:ztotal)
+  #greater
+  #t[1,"z"]
+  
+  for(i in index:ztotal){
+    total = total+t[i,"Freq"]
+    #print(total)
+    #print(t[i,"z"])
+  }
+total/1000
+}
+scramble.hatsTen()
 ```
